src/snapshots/libflatterer__tests__nan.json-fields.csv.snap
---
source: src/lib.rs
expression: output
---
- "table_name,field_name,field_type,field_title,count"
- "contracts,_link,text,_link,1"
- "contracts,_link_main,text,_link_main,1"
- "contracts_items,_link,text,_link,1"
- "contracts_items,_link_contracts,text,_link_contracts,1"
- "contracts_items,_link_main,text,_link_main,1"
- "contracts_items,id,number,id,1"
- "main,_link,text,_link,1"

