src/snapshots/libflatterer__tests__nan.json-tables.csv.snap
---
source: src/lib.rs
expression: output
---
- "table_name,table_title"
- "contracts,contracts"
- "contracts_items,contracts_items"
- "main,main"

