src/snapshots/libflatterer__tests__only_null_field.json-fieldscsv-fields.csv.snap
---
source: src/lib.rs
expression: output
snapshot_kind: text
---
- "table_name,field_name,field_type,field_title,count"
- "main,_link,text,_link,1"
- "main,a,text,a,1"
