src/snapshots/libflatterer__tests__only_null_field.json-fieldscsv-tables.csv.snap
---
source: src/lib.rs
expression: output
snapshot_kind: text
---
- "table_name,table_title"
- "main,main"
