src/snapshots/libflatterer__tests__pushdown.json-pushdown-fields.csv.snap
---
source: src/lib.rs
expression: output
---
- "table_name,field_name,field_type,field_title,count"
- "main,_link,text,_link,1"
- "main,a,text,a,1"
- "main,b,text,b,1"
- "main,c,text,c,1"
- "sublist1,_link,text,_link,2"
- "sublist1,_link_main,text,_link_main,2"
- "sublist1,a,text,a,2"
- "sublist1,d,text,d,1"
- "sublist1,b,text,b,2"
- "sublist1,c,text,c,2"
- "sublist1_sublist2,_link,text,_link,2"
- "sublist1_sublist2,_link_sublist1,text,_link_sublist1,2"
- "sublist1_sublist2,_link_main,text,_link_main,2"
- "sublist1_sublist2,e,text,e,2"
- "sublist1_sublist2,a,text,a,2"
- "sublist1_sublist2,b,text,b,2"
- "sublist1_sublist2,c,text,c,2"
- "sublist1_sublist2,d,text,d,1"

