src/snapshots/libflatterer__tests__tables_csv-4.snap
---
source: src/lib.rs
expression: output

---
- "_link,_link_main,name"
- "1.developer.0,1,deva"
- "2.developer.0,2,devb"

