src/snapshots/libflatterer__tests__tables_csv-5.snap
---
source: src/lib.rs
expression: output

---
- "table_name,table_title"
- "developer,Devs"
- "main,Games"

